new-plants section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,3 +16,7 @@ body {
     background-position: center;
     padding: 30px 100px 160px 30px;
 }
+
+#new-plants {
+    font-family: "Poppins", sans-serif;
+}
