--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -1,4 +1,39 @@
+@import "variables";
+
 * {
     margin: 0;
     box-sizing: border-box;
+}
+
+.container {
+    padding: 0px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button {
+    font-family: Roboto, sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 12px 33px;
+}
+
+.white {
+    color: black;
+    background-color: white;
+}
+
+.green {
+    display: inline;
+    color: white;
+    background-color: $green-button;
+}
+
+.wide {
+    padding-right: 71px;
+    padding-left: 71px;
 }
