--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -5,6 +5,13 @@
     box-sizing: border-box;
 }
 
+.section-title {
+    font-weight: 400;
+    font-size: 40px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 .container {
     padding: 0px 100px;
     display: flex;
