--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -6,6 +6,7 @@
 }
 
 .section-title {
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 40px;
     margin-bottom: 10px;
@@ -20,7 +21,7 @@
 }
 
 .button {
-    font-family: Roboto, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 18px;
     border: none;
