--- a/styles/_our-story-section.scss
+++ b/styles/_our-story-section.scss
@@ -1,7 +1,6 @@
 @import "variables";
 
 .our-story-section {
-    display: flex;
     gap: 110px;
 }
 
@@ -17,7 +16,7 @@
     margin-bottom: 35px;
 
     h3 {
-        font-family: Roboto, sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
         font-size: 18px;
         letter-spacing: 3px;
@@ -27,7 +26,7 @@
     }
 
     h4 {
-        font-family: Sora, sans-serif;
+        font-family: "Sora", sans-serif;
         font-weight: 400;
         font-size: 40px;
     }
