--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,7 @@
 @import "our-story-section";
 @import "feedback-section";
 @import "gift-cards-section";
+@import "principles-section";
 
 body {
     display: flex;
