--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -14,10 +14,14 @@
 }
 
 .container {
-    padding: 0px 100px;
+    //padding: 0px 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.box {
+    width: 1312px;
 }
 
 .button {
