--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -22,6 +22,8 @@
 
 .box {
     width: 1312px;
+    display: flex;
+    align-items: center;
 }
 
 .button {
@@ -32,6 +34,7 @@
     border-radius: 5px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding: 12px 33px;
+    cursor: pointer;
 }
 
 .white {
