get in touch section info + form template

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,3 +2,4 @@ $green-dark: #006722;
 $green-light: #1C823E;
 $green-very-light: #86B797;
 $green-bright: #2AA353;
+$get-in-touch-background: #F3F1F1;
