--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -14,7 +14,7 @@
 }
 
 .container {
-    //padding: 0px 100px;
+    padding: 0px 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,4 +58,9 @@
 .light-wide {
     padding-left: 42px;
     padding-right: 42px;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column;
 }
