--- a/styles/_get-in-touch-section.scss
+++ b/styles/_get-in-touch-section.scss
@@ -2,12 +2,15 @@
 @import "variables";
 
 .get-in-touch-section {
+    display: grid;
+    grid-template-columns: 580px 610px;
     gap: 122px;
     margin-top: 109px;
     margin-bottom: 109px;
 }
 
 .get-in-touch-info {
+    grid-column: 1;
     display: flex;
     flex-direction: column;
     gap: 60px;
@@ -21,6 +24,7 @@
         }
 
         p {
+            width: 580px;
             font-weight: 400;
             font-size: 16px;
         }
@@ -42,6 +46,7 @@
 .contact {
     display: grid;
     grid-template-columns: 4%;
+    gap: 15px;
 
     img {
         grid-column: 1;
@@ -91,5 +96,50 @@
         img {
             width: 15px;
         }
+    }
+}
+
+.get-in-touch-form {
+    grid-column: 2;
+
+    h4 {
+        margin-bottom: 40px;
+        font-size: 24px;
+        font-weight: 400;
+    }
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    align-items: start;
+}
+
+.contact-form-input {
+
+
+    label {
+        font-size: 16px;
+        font-weight: 400;
+        margin-bottom: 6px;
+
+        span {
+            color: #FF0000;
+        }
+    }
+
+    input {
+        width: 610px;
+        height: 40px;
+        background: none;
+        border-radius: 5px;
+        border-width: 1.5px;
+        border-color: rgba(0, 0, 0, 0.2);
+        padding-left: 8px;
+    }
+
+    #comment {
+        height: 110px;
     }
 }
