--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,3 +3,6 @@ $green-light: #1C823E;
 $green-very-light: #86B797;
 $green-bright: #2AA353;
 $get-in-touch-background: #F3F1F1;
+$footer-links: #121212;
+$footer-copyrights: #212121;
+$footer-links-link: #8F8F8F;
