--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@
 @import "gift-cards-section";
 @import "principles-section";
 @import "get-in-touch-section";
+@import "footer";
 
 body {
     display: flex;
