--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -14,7 +14,9 @@
 }
 
 .container {
-    padding: 0px 100px;
+    width: 1312px;
+    align-self: center;
+    //padding: 0px 100px;
     display: flex;
     justify-content: center;
     align-items: center;
