--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -3,19 +3,36 @@
 .footer-links {
     background-color: $footer-links;
     color: white;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-box h1 {
+    width: 210px;
+    font-family: "Roboto", sans-serif;
+    font-size: 40px;
+    font-weight: 400;
+}
+
+
+.footer-box {
     display: flex;
     align-items: start;
     justify-content: start;
     gap: 280px;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-right: 102px;
+}
 
-    h1 {
-        width: 210px;
-        font-family: "Roboto", sans-serif;
-        font-size: 40px;
-        font-weight: 400;
-    }
+.copyrights-box {
+    display: flex;
+    justify-content: start;
+    gap: 640px;
+    padding-top: 23px;
+    padding-bottom: 23px;
+    padding-right: 250px;
 }
 
 .footer-links-group {
@@ -48,10 +65,8 @@
 .footer-copyrights {
     background-color: $footer-copyrights;
     display: flex;
-    justify-content: start;
-    padding-top: 23px;
-    padding-bottom: 23px;
-    gap: 640px;
+    align-items: center;
+    justify-content: center;
 
     h5 {
         font-family: "Sora", sans-serif;
