--- a/styles/_get-in-touch-section.scss
+++ b/styles/_get-in-touch-section.scss
@@ -5,8 +5,8 @@
     display: grid;
     grid-template-columns: 580px 610px;
     gap: 122px;
-    margin-top: 109px;
-    margin-bottom: 109px;
+    padding-top: 109px;
+    padding-bottom: 109px;
 }
 
 .get-in-touch-info {
