sizes + nav fixing

--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -62,6 +62,12 @@
     padding-right: 42px;
 }
 
+.wide-footer {
+    border-radius: 5px;
+    padding-left: 45px;
+    padding-right: 45px;
+}
+
 .form-input {
     display: flex;
     flex-direction: column;
