--- a/styles/_feedback-section.scss
+++ b/styles/_feedback-section.scss
@@ -50,7 +50,7 @@
     width: 80px;
     height: 80px;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
     border-radius: 50%;
     margin-bottom: 20px;
 }
