--- a/styles/_gift-cards-section.scss
+++ b/styles/_gift-cards-section.scss
@@ -1,8 +1,7 @@
 .gift-cards-text {
     font-family: "Sora", sans-serif;
     color: white;
-    margin-top: 225px;
-    margin-bottom: 225px;
+    margin: 225px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
