--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -3,8 +3,7 @@
 .footer-links {
     background-color: $footer-links;
     color: white;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding: 80px 0;
     display: flex;
     align-items: center;
     justify-content: center;
