--- a/styles/_get-in-touch-section.scss
+++ b/styles/_get-in-touch-section.scss
@@ -2,15 +2,12 @@
 @import "variables";
 
 .get-in-touch-section {
-    display: grid;
     grid-template-columns: 580px 610px;
     gap: 122px;
-    padding-top: 109px;
-    padding-bottom: 109px;
+    padding: 109px 0;
 }
 
 .get-in-touch-info {
-    grid-column: 1;
     display: flex;
     flex-direction: column;
     gap: 60px;
@@ -103,7 +100,6 @@
 }
 
 .get-in-touch-form {
-    grid-column: 2;
 
     h4 {
         margin-bottom: 40px;
