--- a/styles/_new-plants-section.scss
+++ b/styles/_new-plants-section.scss
@@ -1,13 +1,17 @@
-.new-plants-section {
-    flex-direction: column;
-    gap: 60px;
-}
+@media (width > 900px) {
+    .new-plants-section {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 60px;
+    }
 
-.plants-group {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 35px;
+    .plants-group {
+        display: flex !important;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 35px;
+    }
 }
 
 .plant-image {
