--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,5 @@
 $green-dark: #006722;
+$green-dark-04: rgba(0, 103, 34, 0.4);
 $green-light: #1C823E;
 $green-very-light: #86B797;
 $green-bright: #2AA353;
